# Cuda-Compute-OSS

./: .gitattributes  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  CUDA_OPTIMIZATION.md  DESIGN.md  LICENSE  README.md  SECURITY.md  bench.py  benchmark.py  cco.config.json  kernel.py  manifest.json  merge_results.py  payload-schema.json  program.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  kernel_request.yml
attention/: __init__.py  benchmark.py  hybrid.py  spec.py
cco/: __init__.py  dispatch_trap.py  gate.py  guard_kernel.py  isolate.py  manifest_tool.py  seed.py  significance.py
champions/dsa_forward/: kernel.py
champions/matmul/: kernel.py
champions/qkv_part_rope/: kernel.py
dashboard/: data.json
docs/: arch_notes.md  compute_optimization.md  stall_reasons.md
eval/: evaluator.py
index/: index.html
kernel_configs/: __init__.py  matmul.py  matmul.toml
matmul/: __init__.py  storage.py
references/: dsa_forward.py
runtime/: Dockerfile  cco_preload.c  gpu.config  start.sh
strategy/: README.md  __init__.py  cli.py  runner.py  storage.py  subspace.py  transforms.py
tests/: test_attention_playground.py  test_cli_errors.py  test_exact_tile_budget.py  test_fill_iota_seed.py  test_landing_page_reference_regime.py  test_landmark_padding.py  test_matmul_dtype_validation.py  test_reconstruct_row_block.py  test_row_block_budget.py  test_strategy_cli_verify.py  test_subspace_flop_ratio.py  test_transform_template_signature.py  test_verify_guard.py
tools/: ncu_profile.py
(+6 files in other folders)
