[project]
name = "cuda-compute-oss"
version = "0.1.0"
description = "GPU kernel optimization competition harness for gittensor subnet 74 (CCO)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0; sys_platform == 'linux'",
    "triton>=3.0.0; sys_platform == 'linux'",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
    "pynvml>=11.5.0; sys_platform == 'linux'",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The repo is a set of top-level packages + run-in-place scripts, not a single
# `cuda_compute_oss/` package, so hatchling must be told explicitly what to ship.
# Without this, `uv run`/`uv sync` fail with "Unable to determine which files to
# ship inside the wheel" on every platform.
[tool.hatch.build.targets.wheel]
packages = ["cco", "kernel_configs", "references"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
